fix: card and bg-image vertical alignment

--- a/card.css
+++ b/card.css
@@ -8,7 +8,7 @@
   box-shadow: 0px 35px 25px 6px rgba(0, 0, 0, 0.09);
 
   position: relative;
-  top: 5px;
+  top: -11px;
 }
 
 .card--big-border-radius {
