--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
   background-color: hsl(229, 57%, 11%);
   background-image: url(./images/bg-desktop.png);
   background-repeat: no-repeat;
-  background-position: bottom -32px center;
+  background-position: bottom -16px center;
 
   display: flex;
   flex-direction: column;
